fixed margin on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -143,7 +143,7 @@ a:active {
     width: 335px;
     height: 375px;
     margin-top: 40px;
-    margin-bottom: 140px;
+    margin-bottom: 50px;
     position: relative;
   }
 
